--- a/src/libraries/icubmod/dragonfly2/CMakeLists.txt
+++ b/src/libraries/icubmod/dragonfly2/CMakeLists.txt
@@ -5,12 +5,12 @@
 #
 
 
-yarp_prepare_device(dragonfly2 TYPE yarp::dev::DragonflyDeviceDriver2Rgb INCLUDE DragonflyDeviceDriver2.h WRAPPER grabber)
+yarp_prepare_plugin(dragonfly2 CATEGORY device TYPE yarp::dev::DragonflyDeviceDriver2Rgb INCLUDE DragonflyDeviceDriver2.h EXTRA_CONFIG WRAPPER=grabber)
 
 # dragonfly2raw is always enabled when dragonfly2 is enabled
 # This is a workaround to enable the creation of the additional source files and to hide the entry in ccmake
 set(ENABLE_icubmod_dragonfly2raw ${ENABLE_icubmod_dragonfly2} CACHE INTERNAL "Enable/disable compilation of icubmod_dragonfly2raw")
-yarp_prepare_device(dragonfly2raw TYPE yarp::dev::DragonflyDeviceDriver2Raw INCLUDE DragonflyDeviceDriver2.h WRAPPER grabber)
+yarp_prepare_plugin(dragonfly2raw  CATEGORY device TYPE yarp::dev::DragonflyDeviceDriver2Raw INCLUDE DragonflyDeviceDriver2.h EXTRA_CONFIG WRAPPER=grabber)
 
 IF(NOT SKIP_dragonfly2)
   FIND_PACKAGE(DRAGONFLYAPI)
