--- a/src/libraries/icubmod/imu3DM_GX3/CMakeLists.txt
+++ b/src/libraries/icubmod/imu3DM_GX3/CMakeLists.txt
@@ -7,7 +7,7 @@
 SET(PROJECTNAME imu3DM_GX3)
 PROJECT(${PROJECTNAME})
 
-yarp_prepare_device(${PROJECTNAME} TYPE yarp::dev::imu3DM_GX3 INCLUDE 3dm_gx3.h WRAPPER inertial)
+yarp_prepare_plugin(${PROJECTNAME} CATEGORY device TYPE yarp::dev::imu3DM_GX3 INCLUDE 3dm_gx3.h EXTRA_CONFIG WRAPPER=inertial)
 
 if (ENABLE_${PROJECTNAME})
     INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${YARP_INCLUDE_DIRS})
