--- a/src/libraries/icubmod/skinprototype/CMakeLists.txt
+++ b/src/libraries/icubmod/skinprototype/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Authors: Lorenzo Natale
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
-yarp_prepare_device(skinprototype TYPE SkinPrototype INCLUDE skinprototype.h WRAPPER skinWrapper)
+yarp_prepare_plugin(skinprototype CATEGORY device TYPE SkinPrototype INCLUDE skinprototype.h EXTRA_CONFIG WRAPPER=skinWrapper)
 
 if (NOT SKIP_skinprototype)
 
