--- a/src/libraries/icubmod/analogServer/CMakeLists.txt
+++ b/src/libraries/icubmod/analogServer/CMakeLists.txt
@@ -5,7 +5,7 @@
 SET(PROJECTNAME analogServer)
 #PROJECT(${PROJECTNAME})
 
-yarp_prepare_device(analogServer TYPE yarp::dev::AnalogServer INCLUDE ${PROJECTNAME}.h)
+yarp_prepare_plugin(analogServer CATEGORY device TYPE yarp::dev::AnalogServer INCLUDE ${PROJECTNAME}.h)
 
 IF (NOT SKIP_${PROJECTNAME})
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${YARP_INCLUDE_DIRS} ${iCubDev_INCLUDE_DIRS} )
