--- a/src/libraries/icubmod/embObjStrain/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjStrain/CMakeLists.txt
@@ -2,9 +2,10 @@
 # Authors: Alberto Cardellino
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
-yarp_prepare_device(embObjStrain TYPE yarp::dev::embObjStrain
-                                       INCLUDE embObjStrain.h
-                                       WRAPPER AnalogServer)
+yarp_prepare_plugin(embObjStrain CATEGORY device
+                                 TYPE yarp::dev::embObjStrain
+                                 INCLUDE embObjStrain.h
+                                 EXTRA_CONFIG WRAPPER=AnalogServer)
 
 IF (NOT SKIP_embObjStrain)
 
