--- a/app/simCartesianControl/CMakeLists.txt
+++ b/app/simCartesianControl/CMakeLists.txt
@@ -7,7 +7,10 @@ set(appname simCartesianControl)
 
 file(GLOB scripts ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*.template)
 file(GLOB conf ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.ini)
+file(GLOB xml ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.xml)
 
-yarp_install(FILES ${conf} DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
 yarp_install(FILES ${scripts} DESTINATION ${ICUB_APPLICATIONS_TEMPLATES_INSTALL_DIR})
+yarp_install(FILES ${conf} DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
+yarp_install(FILES ${xml} DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
+yarp_install(DIRECTORY conf/cartesian DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
 
