--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -23,6 +23,7 @@ if(ICUB_USE_Qt5)
    add_subdirectory(iCubSkinGui-qt)
    add_subdirectory(frameGrabberGui2-qt)
    add_subdirectory(skinManagerGui-qt)
+   add_subdirectory(FirmwareUpdater)
 endif()
 if(ICUB_USE_GTK2)
    add_subdirectory(iCubSkinGui-gtk)
