--- a/src/tools/FirmwareUpdater/CMakeLists.txt
+++ b/src/tools/FirmwareUpdater/CMakeLists.txt
@@ -26,12 +26,14 @@ set(FirmwareUpdater_qt_SRCS changeaddressdialog.cpp
                             main.cpp
                             mainwindow.cpp
                             calibrationwindow.cpp
+                            customtreewidgetitem.cpp
                             selectioncheckbox.cpp)
 set(FirmwareUpdater_qt_HDRS changeaddressdialog.h
                             changeinfodialog.h
                             firmwareupdatercore.h
                             mainwindow.h
                             calibrationwindow.h
+                            customtreewidgetitem.h
                             selectioncheckbox.h)
 set(FirmwareUpdater_qt_QRC_FILES res.qrc)
 set(FirmwareUpdater_qt_UI_FILES changeaddressdialog.ui
