[gravityCompensator,wholeBodyDynamics] use --head_version instead of --headV2
Replaced the option "--headV2" with "--head_version 2.0" (or 2.5), to be consistent with the recent change in iKinGazeCtrl (https://github.com/robotology/icub-main/pull/391).

If the option "--head_version" is absent or has an invalid argument, the head v1 model is used and a message is printed.

/cc https://github.com/robotology/icub-main/issues/285 https://github.com/robotology/icub-main/issues/405

--- a/app/iCubStartup/scripts/iCubStartup.xml.template
+++ b/app/iCubStartup/scripts/iCubStartup.xml.template
@@ -65,7 +65,7 @@
         <!-- Enable/disable wholeBodyDynamics if you do/don't have torque sensors -->
         <module>
                 <name>wholeBodyDynamics</name>
-                <!-- Remember to add the "--headV2" parameter for robots equipped with head v. 2.0 -->
+                <!-- Remember to add the "--head_version 2.0" (or 2.5) parameter for robots equipped with head 2.0 (or 2.5) -->
                 <parameters>--autoconnect</parameters>
                 <node>pwrNode6</node>
                 <dependencies>
@@ -76,7 +76,7 @@
         <!-- Enable/disable gravityCompensator if you do/don't have torque sensors -->
         <module>
                 <name>gravityCompensator</name>
-                <!-- Remember to add the "--headV2" parameter for robots equipped with head v. 2.0 -->
+                <!-- Remember to add the "--head_version 2.0" (or 2.5) parameter for robots equipped with head 2.0 (or 2.5) -->
                 <parameters></parameters>
                 <node>pwrNode6</node>
                 <dependencies>
