--- a/app/iCubStartup/scripts/icubSimStartup.xml.template
+++ b/app/iCubStartup/scripts/icubSimStartup.xml.template
@@ -12,67 +12,83 @@
 
         <module>
                 <name>iCub_SIM</name>
+                <dependencies>
+                   <port timeout="20">/yarplogger</port>
+                </dependencies>
+                <environment>YARP_FORWARD_LOG_ENABLE=1</environment>
                 <node>localhost</node>
         </module>
 
         <module>
                 <name>yarprobotinterface</name>
                 <parameters>--context simCartesianControl --config no_legs.xml</parameters>
-                <node>localhost</node>
                 <dependencies>
-                    <port timeout="40">/icubSim/left_arm/state:o</port>
-                    <port timeout="40">/icubSim/right_arm/state:o</port>
+                    <port timeout="20">/yarplogger</port>
+                    <port timeout="20">/icubSim/left_arm/state:o</port>
+                    <port timeout="20">/icubSim/right_arm/state:o</port>
                 </dependencies>
+                <environment>YARP_FORWARD_LOG_ENABLE=1</environment>
+                <node>localhost</node>
         </module>
 
         <module>
                 <name>iKinCartesianSolver</name>
                 <parameters>--context simCartesianControl --part right_arm</parameters>
-                <node>localhost</node>
                 <dependencies>
-                    <port timeout="40">/icubSim/right_arm/state:o</port>
+                    <port timeout="20">/yarplogger</port>
+                    <port timeout="20">/icubSim/right_arm/state:o</port>
                 </dependencies>
+                <environment>YARP_FORWARD_LOG_ENABLE=1</environment>
+                <node>localhost</node>
         </module>
 
         <module>
                 <name>iKinCartesianSolver</name>
                 <parameters>--context simCartesianControl --part left_arm</parameters>
-                <node>localhost</node>
                 <dependencies>
-                    <port timeout="40">/icubSim/left_arm/state:o</port>
+                    <port timeout="20">/yarplogger</port>
+                    <port timeout="20">/icubSim/left_arm/state:o</port>
                 </dependencies>
+                <environment>YARP_FORWARD_LOG_ENABLE=1</environment>
+                <node>localhost</node>
         </module>
 
         <module>
                 <name>iKinGazeCtrl</name>
                 <parameters>--from configSim.ini</parameters>
-                <node>localhost</node>
                 <dependencies>
-                    <port timeout="40">/icubSim/head/state:o</port>
-                    <port timeout="40">/icubSim/inertial</port>
+                    <port timeout="20">/yarplogger</port>
+                    <port timeout="20">/icubSim/head/state:o</port>
+                    <port timeout="20">/icubSim/inertial</port>
                 </dependencies>
+                <environment>YARP_FORWARD_LOG_ENABLE=1</environment>
+                <node>localhost</node>
         </module>
 
         <module>
                 <name>wholeBodyDynamics</name>
                 <parameters>--robot icubSim --autoconnect --dummy_ft --no_legs</parameters>
-                <node>localhost</node>
                 <dependencies>
-                    <port timeout="40">/icubSim/head/state:o</port>
-                    <port timeout="40">/icubSim/torso/state:o</port>
-                    <port timeout="40">/icubSim/right_arm/state:o</port>
-                    <port timeout="40">/icubSim/left_arm/state:o</port>
-                    <port timeout="40">/icubSim/inertial</port>
+                    <port timeout="20">/yarplogger</port>
+                    <port timeout="20">/icubSim/head/state:o</port>
+                    <port timeout="20">/icubSim/torso/state:o</port>
+                    <port timeout="20">/icubSim/right_arm/state:o</port>
+                    <port timeout="20">/icubSim/left_arm/state:o</port>
+                    <port timeout="20">/icubSim/inertial</port>
                 </dependencies>
+                <environment>YARP_FORWARD_LOG_ENABLE=1</environment>
+                <node>localhost</node>
         </module>
 
         <module>
                 <name>gravityCompensator</name>
                 <parameters>--robot icubSim --no_legs</parameters>
-                <node>localhost</node>
                 <dependencies>
-                    <port timeout="40">/wholeBodyDynamics/rpc:i</port>
+                    <port timeout="20">/yarplogger</port>
+                    <port timeout="20">/wholeBodyDynamics/rpc:i</port>
                 </dependencies>
+                <environment>YARP_FORWARD_LOG_ENABLE=1</environment>
+                <node>localhost</node>
         </module>
 
 </application>
