--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -17,24 +17,22 @@ if(ICUB_USE_OpenCV)
     add_subdirectory(camCalib)
     add_subdirectory(camCalibWithPose)
     add_subdirectory(dualCamCalib)
-    add_subdirectory(actionsRenderingEngine)
     add_subdirectory(motionCUT)
 
     if(ICUB_USE_GSL)
         add_subdirectory(templatePFTracker)
-    else(ICUB_USE_GSL)
+    else()
         message(STATUS "GSL not found/selected, skipping templatePFTracker")
-    endif(ICUB_USE_GSL)
+    endif()
 
     if(ICUB_OpenCV_LEGACY)
         message(STATUS "OpenCV legacy detected, skipping lumaChroma")
         # put hereafter modules that rely on old versions of OpenCV declared as legacy
-    else(ICUB_OpenCV_LEGACY)
+    else()
         add_subdirectory(lumaChroma)
-    endif(ICUB_OpenCV_LEGACY)
-else(ICUB_USE_OpenCV)
+    endif()
+else()
     message(STATUS "OpenCV not found/selected, skipping camCalib")
-    message(STATUS "OpenCV not found/selected, skipping actionsRenderingEngine")
     message(STATUS "OpenCV not found/selected, skipping motionCUT")
     message(STATUS "OpenCV not found/selected, skipping lumaChroma")
     message(STATUS "OpenCV not found/selected, skipping templatePFTracker")
@@ -43,7 +41,13 @@ endif(ICUB_USE_OpenCV)
 if(ICUB_USE_IPOPT)
     add_subdirectory(iKinGazeCtrl)
     add_subdirectory(iKinCartesianSolver)
-else(ICUB_USE_IPOPT)
+else()
     message(STATUS "IPOPT not found/selected, skipping iKinGazeCtrl")
     message(STATUS "IPOPT not found/selected, skipping iKinCartesianSolver")
-endif(ICUB_USE_IPOPT)
+endif()
+
+if(ICUB_USE_IPOPT AND ICUB_USE_OpenCV)
+    add_subdirectory(actionsRenderingEngine)
+else()
+    message(STATUS "Dependencies not met, skipping actionsRenderingEngine")
+endif()
