--- a/app/actionsRenderingEngine/scripts/actionsRenderingEngineDepForSim.xml.template
+++ b/app/actionsRenderingEngine/scripts/actionsRenderingEngineDepForSim.xml.template
@@ -24,6 +24,7 @@
                 <parameters>--context simCartesianControl --config no_legs.xml</parameters>
                 <dependencies>
                     <port timeout="20">/yarplogger</port>
+                    <port timeout="20">/icubSim/torso/state:o</port>
                     <port timeout="20">/icubSim/left_arm/state:o</port>
                     <port timeout="20">/icubSim/right_arm/state:o</port>
                 </dependencies>
@@ -36,6 +37,7 @@
                 <parameters>--context simCartesianControl --part right_arm</parameters>
                 <dependencies>
                     <port timeout="20">/yarplogger</port>
+                    <port timeout="20">/icubSim/torso/state:o</port>
                     <port timeout="20">/icubSim/right_arm/state:o</port>
                 </dependencies>
                 <environment>YARP_FORWARD_LOG_ENABLE=1</environment>
@@ -47,6 +49,7 @@
                 <parameters>--context simCartesianControl --part left_arm</parameters>
                 <dependencies>
                     <port timeout="20">/yarplogger</port>
+                    <port timeout="20">/icubSim/torso/state:o</port>
                     <port timeout="20">/icubSim/left_arm/state:o</port>
                 </dependencies>
                 <environment>YARP_FORWARD_LOG_ENABLE=1</environment>
@@ -58,6 +61,7 @@
                 <parameters>--from configSim.ini</parameters>
                 <dependencies>
                     <port timeout="20">/yarplogger</port>
+                    <port timeout="20">/icubSim/torso/state:o</port>
                     <port timeout="20">/icubSim/head/state:o</port>
                     <port timeout="20">/icubSim/inertial</port>
                 </dependencies>
