Add version information to exported CMake config files
Fixes #437

--- a/conf/template/icub-config-build-tree.cmake.in
+++ b/conf/template/icub-config-build-tree.cmake.in
@@ -6,6 +6,8 @@ if (NOT ICUB_FOUND)
 
 message(STATUS "Using iCub from build tree")
 
+set(ICUB_VERSION @ICUB_VERSION@)
+
 include("@CMAKE_BINARY_DIR@/@EXPORT_INCLUDE_FILE@")
 include("@CMAKE_BINARY_DIR@/@EXPORT_CONFIG_FILE@")
 
