--- a/app/actionsRenderingEngine/scripts/actionsRenderingEngineSim.xml.template
+++ b/app/actionsRenderingEngine/scripts/actionsRenderingEngineSim.xml.template
@@ -1,5 +1,5 @@
 <application>
-<name>ActionsRenderingEngine Dependencies for Simulator</name>
+<name>ActionsRenderingEngine for iCubSim</name>
 
         <dependencies>
         </dependencies>
