--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,22 @@ sudo: required
 dist: trusty
 language: cpp
 
-os: 
+os:
   - linux
   - osx
 
 compiler:
   - gcc
   - clang
-  
+
 matrix:
   allow_failures:
   - os: osx
-  
+
+env:
+  global:
+   - YARP_BRANCH="master"
+
 before_script:
   #ubuntu dependencies
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo sh -c 'echo "deb http://www.icub.org/ubuntu trusty contrib/science" > /etc/apt/sources.list.d/icub.list'; fi
@@ -22,18 +26,15 @@ before_script:
 
   #OS X dependencies
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew tap robotology/cask; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install `brew deps --1 yarp | sed -e ':a' -e 'N' -e '$!ba' -e 's/\n/ /g'`; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install cmake eigen goocanvas sdl sdl_gfx sdl_image gcc; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install --only-dependencies yarp; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install goocanvas sdl sdl_gfx sdl_image gcc; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install ode --enable-double-precision; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew tap homebrew/science; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install opencv3; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install --with-qt3support qt; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install homebrew/science/opencv3; fi
   #use the same set of cmake options used in the dashboard build
   - source ./admin/scripts/generate-cmake-options.sh
   #install yarp from master
-  - git clone https://github.com/robotology/yarp
+  - git clone --depth 1 -b $YARP_BRANCH https://github.com/robotology/yarp
   - cd yarp
-  - git checkout devel
   - mkdir build
   - cd build
   - cmake ../ -DCREATE_GUIS:BOOL=ON -DCREATE_LIB_MATH:BOOL=ON -DCREATE_OPTIONAL_CARRIERS:BOOL=ON -DENABLE_yarpcar_bayer_carrier:BOOL=ON
@@ -41,9 +42,9 @@ before_script:
   - sudo make install
   - cd ../..
   - mkdir build
-  - cd build 
+  - cd build
   - cmake ../ ${CMAKE_OPTIONS}
-  
+
 script:
 
   - cmake --build .
